# surfels_unknown_space_example

./: CMakeLists.txt  README.md  compare.sh  download_dataset.sh  install_dependencies.sh  run.sh
cmake/: surfels_unknown_space_cl.cmake
include/surfels_unknown_space/: surfels_unknown_space.h
src/: compare_surfel_clouds.cpp  state_point_type.h  surfels_unknown_space.cl  surfels_unknown_space.cpp  surfels_unknown_space_example.cpp  surfels_unknown_space_opencl.cpp
